# Proficiency

./: .editorconfig  .gitignore  MANIFEST.in  README.md  create_files.sh  create_klld.py  database.py  dump_wiktionary.py  extract_dbnary.py  extract_kaikki.py  extract_kindle_lemmas.py  extract_wiktionary.py  kaikki.py  kaikki_languages.json  main.py  mypy.ini  pyproject.toml  requirements.txt  split_lang.py  tst.py  util.py
.github/workflows/: build.yml  linter.yml  release.yml  test.yml
data/: dbnary_languages.json  kaikki_languages.json
en/: README.md  add_lemmas.py  convert_sd_ap.py  dump_kindle_lemmas.py  extract_kindle_lemmas.py  kindle_all_lemmas.csv  translate.py
ja/: README.md  convert.py  difficulty.json
src/proficiency/: checksum.py  create_klld.py  database.py  extract_dbnary.py  extract_kaikki.py  extract_kindle_lemmas.py  languages.py  main.py  split_jsonl.py  util.py  wiki_titles.py
src/proficiency/data/: dbnary_languages.json
src/proficiency/en/: README.md  add_lemmas.py  convert_sd_ap.py  kindle_enabled_lemmas.json
src/proficiency/ja/: convert.py  difficulty.json
src/proficiency/zh/: README.md  convert_naer.py  difficulty.json
tests/: test_translation.py  test_util.py
zh/: README.md  convert_naer.py
