[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Proficiency"
version = "0.5.9"
authors = [
    {name = "xxyzz"}
]
description = "Create language files for WordDumb."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
dependencies = [
    "lemminflect",
    "OpenCC",
    "wordfreq[mecab]",
    "wiktextract-lemmatization @ git+https://github.com/Vuizur/wiktextract-lemmatization@37f438eb973364de4d5e70959ee1c2aa26bf5ba5",
    "pyoxigraph",
]

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "mypy",
    "ruff",
]

[project.scripts]
proficiency = "proficiency.main:main"
split_jsonl = "proficiency.split_jsonl:main"

[tool.setuptools]
zip-safe = false

[tool.mypy]
check_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = "lemminflect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opencc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wiktextract_lemmatization.*"
ignore_missing_imports = true
